# cargo-feature-matrix

./: .commitlintrc.json  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  LICENSE-MIT.txt  LICENSE.txt  README.md  release.toml  setup-dev-environment
.github/workflows/: cargo-audit.yml  ci.yml  commitlint.yml  pre-commit.yml
src/: config.rs  execution.rs  features.rs  lib.rs  main.rs
tests/: snapshot.rs
tests/samples/: .gitignore
tests/samples/conflict/: Cargo.toml
tests/samples/deny/: Cargo.toml
tests/samples/empty/: Cargo.toml
tests/samples/features/: Cargo.toml
tests/samples/include/: Cargo.toml
tests/samples/seed/: Cargo.toml
tests/samples/seed/src/: lib.rs
tests/samples/skip/: Cargo.toml
tests/snapshots/: snapshot__no_default_features@seed.snap  snapshot__test@conflict.snap  snapshot__test@deny.snap  snapshot__test@empty.snap  snapshot__test@features.snap  snapshot__test@include.snap  snapshot__test@seed.snap  snapshot__test@skip.snap
