[package]
name = "cargo-feature-matrix"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.2.2"
edition = "2021"
description = "run cargo commands on a matrix of feature sets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Person-93/cargo-feature-matrix"

[dependencies]
anyhow = "1.0.51"
atty = "0.2.14"
cargo_metadata = "0.14.1"
clap = { version = "=3.0.0-beta.5", features = ["wrap_help"] }
derive_more = "0.99.17"
figment = { version = "0.10.6", features = ["json"] }
itertools = "0.10.1"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
yansi = "0.5.0"

[dev-dependencies]
assert_cmd = "2.0.2"
insta = { version = "1.8.0", features = ["glob"] }
