[package]
name = "cargo-feature-matrix"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.4.3"
edition = "2024"
description = "run cargo commands on a matrix of feature sets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Person-93/cargo-feature-matrix"

[dependencies]
anyhow = "1.0.66"
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
derive_more = { version = "1", features = ["full"] }
figment = { version = "0.10.8", features = ["json"] }
itertools = "0.13"
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
yansi = "1.0"

[dev-dependencies]
assert_cmd = "2.0.6"
insta = { version = "1.21.1", features = ["glob"] }
